--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'org.osmdroid:osmdroid-android:6.1.10'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 }
