--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,14 +25,14 @@
             </intent-filter>
         </activity>
 
-        <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="${MAPS_API_KEY}" />
+<!--        <meta-data-->
+<!--            android:name="com.google.android.geo.API_KEY"-->
+<!--            android:value="${MAPS_API_KEY}" />-->
 
-        <activity android:name=".ScannerManager$CaptureAct"
-            android:screenOrientation="fullSensor"
-            android:stateNotNeeded="true"
-            android:theme="@style/zxing_CaptureTheme"/>
+<!--        <activity android:name=".ScannerManager$CaptureAct"-->
+<!--            android:screenOrientation="fullSensor"-->
+<!--            android:stateNotNeeded="true"-->
+<!--            android:theme="@style/zxing_CaptureTheme"/>-->
     </application>
 
 </manifest>
