--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.OrlandoRecycle"
+        android:enableOnBackInvokedCallback="true"
         tools:targetApi="tiramisu">
         <activity
             android:name=".MainActivity"
@@ -25,9 +26,10 @@
             </intent-filter>
         </activity>
 
-<!--        <meta-data-->
-<!--            android:name="com.google.android.geo.API_KEY"-->
-<!--            android:value="${MAPS_API_KEY}" />-->
+        <!-- need for maps -->
+       <meta-data
+           android:name="com.google.android.geo.API_KEY"
+            android:value="${MAPS_API_KEY}" />
 
 <!--        <activity android:name=".ScannerManager$CaptureAct"-->
 <!--            android:screenOrientation="fullSensor"-->
