--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,12 +29,8 @@
         <!-- need for maps -->
        <meta-data
            android:name="com.google.android.geo.API_KEY"
-            android:value="${MAPS_API_KEY}" />
+            android:value="AIzaSyBuuJzCEc0onufgnsWl7y1QLuCZSNZUfMg" />
 
-<!--        <activity android:name=".ScannerManager$CaptureAct"-->
-<!--            android:screenOrientation="fullSensor"-->
-<!--            android:stateNotNeeded="true"-->
-<!--            android:theme="@style/zxing_CaptureTheme"/>-->
     </application>
 
 </manifest>
