--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,17 +53,17 @@ dependencies {
 }
 
 // NEED FOR MAPS
-//secrets {
-//    // Optionally specify a different file name containing your secrets.
-//    // The plugin defaults to "local.properties"
-//    propertiesFileName = "secrets.properties"
-//
-//    // A properties file containing default secret values. This file can be
-//    // checked in version control.
-//    defaultPropertiesFileName = "local.defaults.properties"
-//
-//    // Configure which keys should be ignored by the plugin by providing regular expressions.
-//    // "sdk.dir" is ignored by default.
-//    ignoreList.add("keyToIgnore") // Ignore the key "keyToIgnore"
-//    ignoreList.add("sdk.*")       // Ignore all keys matching the regexp "sdk.*"
-//}
+secrets {
+    // Optionally specify a different file name containing your secrets.
+    // The plugin defaults to "local.properties"
+    propertiesFileName = "secrets.properties"
+
+    // A properties file containing default secret values. This file can be
+    // checked in version control.
+    defaultPropertiesFileName = "local.defaults.properties"
+
+    // Configure which keys should be ignored by the plugin by providing regular expressions.
+    // "sdk.dir" is ignored by default.
+    ignoreList.add("keyToIgnore") // Ignore the key "keyToIgnore"
+    ignoreList.add("sdk.*")       // Ignore all keys matching the regexp "sdk.*"
+}
