--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     implementation 'com.journeyapps:zxing-android-embedded:4.3.0' // For barcode Scanner
     implementation 'com.google.android.gms:play-services-maps:18.2.0' // Maps SDK for Android - NEED FOR MAPS
     implementation 'com.google.android.libraries.places:places:3.3.0' // NEED FOR MAPS
+    implementation 'androidx.fragment:fragment:1.3.0'
 }
 
 // NEED FOR MAPS
