--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -20,6 +22,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.OrlandoRecycle"
         android:enableOnBackInvokedCallback="true"
+        android:hardwareAccelerated="true"
         tools:targetApi="tiramisu">
         <activity
             android:name=".MainActivity"
