--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,7 @@
         <!-- NEED FOR MAPS TO WORK -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="${MAPS_API_KEY}"/>
+            android:value="AIzaSyBuuJzCEc0onufgnsWl7y1QLuCZSNZUfMg"/>
         <!-- OPTIONALLY USE IF NOT USING SECRETS PLUGIN:
         android:value="<INSERT-API-KEY-HERE>"
         -->
