Add animation into item information screen and separate item name from description.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,7 +51,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:18.2.0' // Maps SDK for Android - NEED FOR MAPS
     implementation 'com.google.android.libraries.places:places:3.4.0' // NEED FOR MAPS
     implementation 'androidx.fragment:fragment:1.6.2'
-    implementation 'com.airbnb.android:lottie:6.1.0'
+    implementation 'com.airbnb.android:lottie:6.1.0' // Animation
 }
 
 // NEED FOR MAPS
