use secret key plugin instead

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,7 +58,7 @@ dependencies {
 secrets {
     // Optionally specify a different file name containing your secrets.
     // The plugin defaults to "local.properties"
-    propertiesFileName = "secrets.properties"
+    propertiesFileName = "local.properties"
 
     // A properties file containing default secret values. This file can be
     // checked in version control.
