--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,8 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="${GMP_KEY}"/>
+            android:value="${GMP_KEY}"/> <!-- // If your API key is restricted, make sure the restrictions are correctly configured in Google Cloud Console,
+            and that it can call the Places API and Maps SDK for Android -->
 
     </application>
 
