--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,14 +34,11 @@
             </intent-filter>
         </activity>
 
-        <!-- NEED FOR MAPS TO WORK -->
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyBuuJzCEc0onufgnsWl7y1QLuCZSNZUfMg"/>
-        <!-- OPTIONALLY USE IF NOT USING SECRETS PLUGIN:
-        android:value="<INSERT-API-KEY-HERE>"
-        -->
-
+            android:value="${GMP_KEY}"/> <!-- // If your API key is restricted, make sure the restrictions are correctly configured in Google Cloud Console,
+            and that it can call the Places API and Maps SDK for Android -->
 
     </application>
 
