--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
 
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-id 'com.android.application' version '8.3.2' apply false
+    id 'com.android.application' version '8.3.2' apply false
+    id 'com.google.gms.google-services' version '4.4.1' apply false // Google Services Plugin
 }
 
