added a switch for enabling notifications when the user clicks the switch they will see a popup that ells them they have enabled notifications and the opposite if they click it again.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
+
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -24,6 +27,7 @@
         android:enableOnBackInvokedCallback="true"
         android:hardwareAccelerated="true"
         tools:targetApi="tiramisu">
+        <receiver android:name=".NotificationReceiver"/>
         <activity
             android:name=".MainActivity"
             android:exported="true">
