--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 *.iml
 
 .gradle
-/local.properties
+/local.defaults.properties
 /.idea/caches
 /.idea/libraries
 /.idea/modules.xml
@@ -13,4 +13,4 @@
 /captures
 .externalNativeBuild
 .cxx
-local.properties
+local.defaults.properties
