added a switch for enabling notifications when the user clicks the switch they will see a popup that ells them they have enabled notifications and the opposite if they click it again.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,9 +21,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.OrlandoRecycle"
-        android:enableOnBackInvokedCallback="true"
         android:hardwareAccelerated="true"
         tools:targetApi="tiramisu">
+        <receiver android:name=".NotificationReceiver"/>
         <activity
             android:name=".MainActivity"
             android:exported="true">
